2012-08-25  Niels Grewe <niels.grewe@halbordnung.de>

	* configure.ac: Allow a cross-compilation configuration to be
	specified using the `--with-cross-compilation-info=' switch.
	Tweak configure script to behave gracefully when
	cross-compiling.
	* configure: Regenerate.
	* cross.config: Add default values for cross-compilation.

	Make the configure script behave more friendly when
	cross-compiling.

2012-08-16  Niels Grewe <niels.grewe@halbordnung.de>

	* configure.ac: Check for objc_root_class attribute
	* configure: Regenerate
	* config/objc-common.g: Annotate root classes.
	* Headers/GNUstepBase/config.h.in: Regenerate
	* Headers/GNUstepBase/GSConfig.h.in: Add macro for root class
	attribute availability.
	* Headers/GNUstepBase/GSVersionMacros.h: Define GS_ROOT_CLASS
	depending on whether the compiler supports it.
	* Headers/Foundation/NSObject.h: Mark NSObject as a root class.
	* Headers/Foundation/NSProxy.h: Mark NSProxy as a root class.
	* Source/NSDistantObject: Mark GSDistantObjectPlaceholder as a
	root class.
	* Source/NSObject.m: Mark NSZombie as a root class.

	Changes to support clang's __attribute__((objc_root_class)).
 	
2012-08-10  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSScanner.m: Fix error in comment
        * Tools/pldes.m: Update to more modern APIs
        * Tools/plser.m: Update to more modern APIs
        * Source/NSPropertyList.m: Update for usigned long long
        * Source/NSString.m: Make intValue, integerValue, longLongValue
        return large unsigned values as negative.
        Fixes to try to cope with property lists containing very large
        unsigned integers (top bit set).

2012-08-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPathUtilities.m:
        Fix permissions on temporary directory rarther than just failing ...
        suggestion by Wolfgang.

2012-08-10  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSFileManager.m: ([-createDirectoryAtPath:attributes:])